--- a/ekologi/index.html
+++ b/ekologi/index.html
@@ -4,7 +4,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lovisas kingspel:P</title>
+    <title>Östersjöns Hemligheter!</title>
     <link rel="stylesheet" href="styles/stylesheet.css">
     
 </head>
